build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt
See file:///Users/maximocazares/workspace/Axon/build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp.
compiling Robot.cpp failed.
In file included from /Users/maximocazares/workspace/Axon/src/main/cpp/Robot.cpp:2:
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/WPILib.h:14:2: error: #warning is a language extension [-Werror,-Wpedantic]
#warning "WPILib.h is deprecated; include frc/WPILib.h instead"
 ^
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/WPILib.h:14:2: warning: "WPILib.h is deprecated; include frc/WPILib.h instead" [-W#warnings]
In file included from /Users/maximocazares/workspace/Axon/src/main/cpp/Robot.cpp:5:
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/TimedRobot.h:14:2: error: #warning is a language extension [-Werror,-Wpedantic]
#warning "TimedRobot.h is deprecated; include frc/TimedRobot.h instead"
 ^
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/TimedRobot.h:14:2: warning: "TimedRobot.h is deprecated; include frc/TimedRobot.h instead" [-W#warnings]
2 warnings and 2 errors generated.

Finished compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp, see full log file:///Users/maximocazares/workspace/Axon/build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt.
